feat: Added simplified Models and respective changes in the packages